@@ -265,6 +265,8 @@ verilog/parser_bugs.v:303: SIGNAL_DECL  'parameter' 'c' '' '' '' '3.0'
 verilog/parser_bugs.v:304: SIGNAL_DECL  'parameter' 'd' '' '' '' '4.0'
 verilog/parser_bugs.v:305: SIGNAL_DECL  'parameter' 'e' '' '' '' '5.0'
 verilog/parser_bugs.v:306: ENDMODULE  'endmodule'
+verilog/parser_bugs.v:308: MODULE  'module' 'bugrt43138' undef '0'
+verilog/parser_bugs.v:310: ENDMODULE  'endmodule'
 verilog/pinorder.v:006: MODULE  'module' 'pinorder4' undef '0'
 verilog/pinorder.v:007: SIGNAL_DECL  'wire' 'b_i' '' '' '' ''
 verilog/pinorder.v:008: SIGNAL_DECL  'wire' 'd_o' '' '' '' ''
