@@ -305,3 +305,7 @@ module bugvp64;
    parameter realtime d=4.0;
    parameter time     e=5.0;
 endmodule
+
+module bugrt43138;
+   assign {{o1,o2},o3,o4,{o5,o6}} = {{i1,i2},i3,i4,{i5,i6}};
+endmodule
